[gd_scene load_steps=5 format=3 uid="uid://bi5or4a50uaw4"]

[ext_resource type="Texture2D" uid="uid://cdbasaiaihk0h" path="res://materialBundle/bundle1/ep_9.png" id="1"]
[ext_resource type="AudioStream" uid="uid://rt8tawblmf4w" path="res://music/bullet_hit.wav" id="2"]
[ext_resource type="PackedScene" path="res://music/MusicController.tscn" id="3"]
[ext_resource type="Script" uid="uid://dkmpqkfqsf2ag" path="res://enemy/mob.gd" id="4"]

[node name="Mob" type="Area2D" groups=["mobs"]]
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.996926, 1.00403)
polygon = PackedVector2Array(1.00308, 38.8435, 7.02158, 38.8435, 57.1758, -17.9278, 40.1233, -41.8314, 14.0432, -23.9037, 2.00617, -34.8595, -11.0339, -22.9077, -37.1141, -42.8274, -54.1665, -15.9358, -5.01542, 38.8435)

[node name="BulletHitMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")

[node name="MusicController" parent="." instance=ExtResource("3")]

[connection signal="area_entered" from="." to="." method="_on_Mob_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
